# greybeard

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  RELEASING.md  demo.tape  mkdocs.yml  pyproject.toml  release.sh  review.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: contributing.md  index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: backends.md  mcp.md  output.md  packs.md
docs/reference/: cli.md  config-schema.md  pack-schema.md
examples/: custom-pack.md  review-a-diff.md
packs/: startup-pragmatist.yaml
staff_review/: analyzer.py  cli.py  config.py  mcp_server.py  packs.py
tests/: test_analyzer.py  test_config.py  test_mcp_server.py  test_packs.py
